--- a/Untitled Folder/Untitled.ipynb
+++ b/Untitled Folder/Untitled.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,18 +239,180 @@
    "source": [
     "#load data to df\n",
     "Game_Odds = \"nfl.xlsx\"\n",
-    "Odd_df = pd.read_excel(Game_Odds)\n",
-    "Odd_df.tail()"
+    "Odds_df = pd.read_excel(Game_Odds)\n",
+    "Odds_df.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Home Team</th>\n",
+       "      <th>Away Team</th>\n",
+       "      <th>Home Score</th>\n",
+       "      <th>Away Score</th>\n",
+       "      <th>Home Odds Open</th>\n",
+       "      <th>Away Odds Open</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3925</th>\n",
+       "      <td>2006-09-10</td>\n",
+       "      <td>Detroit Lions</td>\n",
+       "      <td>Seattle Seahawks</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>1.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3926</th>\n",
+       "      <td>2006-09-10</td>\n",
+       "      <td>Cleveland Browns</td>\n",
+       "      <td>New Orleans Saints</td>\n",
+       "      <td>14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3927</th>\n",
+       "      <td>2006-09-10</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>Atlanta Falcons</td>\n",
+       "      <td>6</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.434783</td>\n",
+       "      <td>2.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3928</th>\n",
+       "      <td>2006-09-10</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>San Francisco 49ers</td>\n",
+       "      <td>34</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1.181818</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3929</th>\n",
+       "      <td>2006-09-07</td>\n",
+       "      <td>Pittsburgh Steelers</td>\n",
+       "      <td>Miami Dolphins</td>\n",
+       "      <td>28</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>2.050000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date            Home Team            Away Team  Home Score  \\\n",
+       "3925 2006-09-10        Detroit Lions     Seattle Seahawks           6   \n",
+       "3926 2006-09-10     Cleveland Browns   New Orleans Saints          14   \n",
+       "3927 2006-09-10    Carolina Panthers      Atlanta Falcons           6   \n",
+       "3928 2006-09-10    Arizona Cardinals  San Francisco 49ers          34   \n",
+       "3929 2006-09-07  Pittsburgh Steelers       Miami Dolphins          28   \n",
+       "\n",
+       "      Away Score  Home Odds Open  Away Odds Open  \n",
+       "3925           9        3.500000        1.333333  \n",
+       "3926          19        1.500000        2.750000  \n",
+       "3927          20        1.434783        2.900000  \n",
+       "3928          27        1.181818        5.000000  \n",
+       "3929          17        1.800000        2.050000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Transform df by selecting just the desired columns. \n",
+    "#Note that data from the 2013-2014 or older only has the opening odds \n",
+    "\n",
+    "Opening_Odds_df = Odds_df[[\"Date\", \"Home Team\", \"Away Team\", \"Home Score\", \"Away Score\", \"Home Odds Open\", \"Away Odds Open\"]]\n",
+    "Opening_Odds_df.tail()\n",
+    "Opening_Odds_df.dropna\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.dropna of            Date            Home Team                 Away Team  Home Score  \\\n",
+       "0    2020-12-08     Baltimore Ravens            Dallas Cowboys          34   \n",
+       "1    2020-12-07  San Francisco 49ers             Buffalo Bills          24   \n",
+       "2    2020-12-07  Pittsburgh Steelers  Washington Football Team          17   \n",
+       "3    2020-12-06   Kansas City Chiefs            Denver Broncos          22   \n",
+       "4    2020-12-06    Green Bay Packers       Philadelphia Eagles          30   \n",
+       "...         ...                  ...                       ...         ...   \n",
+       "3925 2006-09-10        Detroit Lions          Seattle Seahawks           6   \n",
+       "3926 2006-09-10     Cleveland Browns        New Orleans Saints          14   \n",
+       "3927 2006-09-10    Carolina Panthers           Atlanta Falcons           6   \n",
+       "3928 2006-09-10    Arizona Cardinals       San Francisco 49ers          34   \n",
+       "3929 2006-09-07  Pittsburgh Steelers            Miami Dolphins          28   \n",
+       "\n",
+       "      Away Score  Home Odds Open  Away Odds Open  \n",
+       "0             17        1.270000        3.800000  \n",
+       "1             34        2.350000        1.640000  \n",
+       "2             23        1.220000        4.500000  \n",
+       "3             16        1.120000        6.500000  \n",
+       "4             16        1.230000        4.250000  \n",
+       "...          ...             ...             ...  \n",
+       "3925           9        3.500000        1.333333  \n",
+       "3926          19        1.500000        2.750000  \n",
+       "3927          20        1.434783        2.900000  \n",
+       "3928          27        1.181818        5.000000  \n",
+       "3929          17        1.800000        2.050000  \n",
+       "\n",
+       "[3930 rows x 7 columns]>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#transform df by selecting just the necessary columns\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
