--- a/Untitled Folder/Untitled.ipynb
+++ b/Untitled Folder/Untitled.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sqlalchemy import create_engine"
    ]
   },
@@ -240,12 +241,13 @@
     "#load data to df\n",
     "Game_Odds = \"nfl.xlsx\"\n",
     "Odds_df = pd.read_excel(Game_Odds)\n",
-    "Odds_df.tail()"
+    "Odds_df.tail()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,8 +274,7 @@
        "      <th>Date</th>\n",
        "      <th>Home Team</th>\n",
        "      <th>Away Team</th>\n",
-       "      <th>Home Score</th>\n",
-       "      <th>Away Score</th>\n",
+       "      <th>Home Win</th>\n",
        "      <th>Home Odds Open</th>\n",
        "      <th>Away Odds Open</th>\n",
        "    </tr>\n",
@@ -284,8 +285,7 @@
        "      <td>2006-09-10</td>\n",
        "      <td>Detroit Lions</td>\n",
        "      <td>Seattle Seahawks</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
+       "      <td>False</td>\n",
        "      <td>3.500000</td>\n",
        "      <td>1.333333</td>\n",
        "    </tr>\n",
@@ -294,8 +294,7 @@
        "      <td>2006-09-10</td>\n",
        "      <td>Cleveland Browns</td>\n",
        "      <td>New Orleans Saints</td>\n",
-       "      <td>14</td>\n",
-       "      <td>19</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.500000</td>\n",
        "      <td>2.750000</td>\n",
        "    </tr>\n",
@@ -304,8 +303,7 @@
        "      <td>2006-09-10</td>\n",
        "      <td>Carolina Panthers</td>\n",
        "      <td>Atlanta Falcons</td>\n",
-       "      <td>6</td>\n",
-       "      <td>20</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.434783</td>\n",
        "      <td>2.900000</td>\n",
        "    </tr>\n",
@@ -314,8 +312,7 @@
        "      <td>2006-09-10</td>\n",
        "      <td>Arizona Cardinals</td>\n",
        "      <td>San Francisco 49ers</td>\n",
-       "      <td>34</td>\n",
-       "      <td>27</td>\n",
+       "      <td>True</td>\n",
        "      <td>1.181818</td>\n",
        "      <td>5.000000</td>\n",
        "    </tr>\n",
@@ -324,8 +321,7 @@
        "      <td>2006-09-07</td>\n",
        "      <td>Pittsburgh Steelers</td>\n",
        "      <td>Miami Dolphins</td>\n",
-       "      <td>28</td>\n",
-       "      <td>17</td>\n",
+       "      <td>True</td>\n",
        "      <td>1.800000</td>\n",
        "      <td>2.050000</td>\n",
        "    </tr>\n",
@@ -334,22 +330,22 @@
        "</div>"
       ],
       "text/plain": [
-       "           Date            Home Team            Away Team  Home Score  \\\n",
-       "3925 2006-09-10        Detroit Lions     Seattle Seahawks           6   \n",
-       "3926 2006-09-10     Cleveland Browns   New Orleans Saints          14   \n",
-       "3927 2006-09-10    Carolina Panthers      Atlanta Falcons           6   \n",
-       "3928 2006-09-10    Arizona Cardinals  San Francisco 49ers          34   \n",
-       "3929 2006-09-07  Pittsburgh Steelers       Miami Dolphins          28   \n",
+       "           Date            Home Team            Away Team  Home Win  \\\n",
+       "3925 2006-09-10        Detroit Lions     Seattle Seahawks     False   \n",
+       "3926 2006-09-10     Cleveland Browns   New Orleans Saints     False   \n",
+       "3927 2006-09-10    Carolina Panthers      Atlanta Falcons     False   \n",
+       "3928 2006-09-10    Arizona Cardinals  San Francisco 49ers      True   \n",
+       "3929 2006-09-07  Pittsburgh Steelers       Miami Dolphins      True   \n",
        "\n",
-       "      Away Score  Home Odds Open  Away Odds Open  \n",
-       "3925           9        3.500000        1.333333  \n",
-       "3926          19        1.500000        2.750000  \n",
-       "3927          20        1.434783        2.900000  \n",
-       "3928          27        1.181818        5.000000  \n",
-       "3929          17        1.800000        2.050000  "
+       "      Home Odds Open  Away Odds Open  \n",
+       "3925        3.500000        1.333333  \n",
+       "3926        1.500000        2.750000  \n",
+       "3927        1.434783        2.900000  \n",
+       "3928        1.181818        5.000000  \n",
+       "3929        1.800000        2.050000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,51 +354,32 @@
     "#Transform df by selecting just the desired columns. \n",
     "#Note that data from the 2013-2014 or older only has the opening odds \n",
     "\n",
-    "Opening_Odds_df = Odds_df[[\"Date\", \"Home Team\", \"Away Team\", \"Home Score\", \"Away Score\", \"Home Odds Open\", \"Away Odds Open\"]]\n",
+    "#Add column that can summarize int Home/Away scores with Boolean Home wins instead\n",
+    "Odds_df['Home Win'] =  np.where(Odds_df[\"Home Score\"] > Odds_df[\"Away Score\"], True, False)\n",
+    "\n",
+    "#Select desired columns\n",
+    "Opening_Odds_df = Odds_df[[\"Date\", \"Home Team\", \"Away Team\", \"Home Win\", \"Home Odds Open\", \"Away Odds Open\"]]\n",
+    "Opening_Odds_df.dropna\n",
     "Opening_Odds_df.tail()\n",
-    "Opening_Odds_df.dropna\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method DataFrame.dropna of            Date            Home Team                 Away Team  Home Score  \\\n",
-       "0    2020-12-08     Baltimore Ravens            Dallas Cowboys          34   \n",
-       "1    2020-12-07  San Francisco 49ers             Buffalo Bills          24   \n",
-       "2    2020-12-07  Pittsburgh Steelers  Washington Football Team          17   \n",
-       "3    2020-12-06   Kansas City Chiefs            Denver Broncos          22   \n",
-       "4    2020-12-06    Green Bay Packers       Philadelphia Eagles          30   \n",
-       "...         ...                  ...                       ...         ...   \n",
-       "3925 2006-09-10        Detroit Lions          Seattle Seahawks           6   \n",
-       "3926 2006-09-10     Cleveland Browns        New Orleans Saints          14   \n",
-       "3927 2006-09-10    Carolina Panthers           Atlanta Falcons           6   \n",
-       "3928 2006-09-10    Arizona Cardinals       San Francisco 49ers          34   \n",
-       "3929 2006-09-07  Pittsburgh Steelers            Miami Dolphins          28   \n",
-       "\n",
-       "      Away Score  Home Odds Open  Away Odds Open  \n",
-       "0             17        1.270000        3.800000  \n",
-       "1             34        2.350000        1.640000  \n",
-       "2             23        1.220000        4.500000  \n",
-       "3             16        1.120000        6.500000  \n",
-       "4             16        1.230000        4.250000  \n",
-       "...          ...             ...             ...  \n",
-       "3925           9        3.500000        1.333333  \n",
-       "3926          19        1.500000        2.750000  \n",
-       "3927          20        1.434783        2.900000  \n",
-       "3928          27        1.181818        5.000000  \n",
-       "3929          17        1.800000        2.050000  \n",
-       "\n",
-       "[3930 rows x 7 columns]>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-9cacbb67e6d7>:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  Opening_Odds_df['Home Win'] =  np.where(Opening_Odds_df[\"Home Score\"] > Opening_Odds_df[\"Away Score\"], True, False)\n"
+     ]
     }
    ],
    "source": []
