NFL write to csv

--- a/etl-ufc/etlproject2-ufc.ipynb
+++ b/etl-ufc/etlproject2-ufc.ipynb
@@ -2442,7 +2442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ufc_transformed.to_sql(name='ufc_transformed', con=engine, if_exists='append', index=True)"
+    "ufc_transformed.to_csv(name='ufc_transformed', con=engine, if_exists='append', index=True)"
    ]
   },
   {
