--- a/Untitled Folder/Untitled.ipynb
+++ b/Untitled Folder/Untitled.ipynb
@@ -366,12 +366,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write to csv\n",
-    "Opening_Odds_df.to_sql(name='NFL_Opening_Odds', con=engine, if_exists='append', index=True)"
+    "Opening_Odds_df.to_csv('NFL_Opening_Odds')"
    ]
   },
   {
@@ -390,7 +390,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#moving odds"
+   ]
   },
   {
    "cell_type": "code",
